--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 	<div id="mount"></div>
     <script src="assets/bundle.js" charset="utf-8"></script>
     <script type="text/javascript">
-        TestLib.render(document.getElementById('mount'));
+		var mount = document.getElementById('mount')
+        TestLib.render({ rootEl: mount });
     </script>
 </body>
 </html>
